--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {
 
 header {
   border-top: 7px solid #fff;
-  background: url(/assets/images/pexels-photo-6310660.jpeg);
+  background: url(../../assets/images/pexels-photo-6310660.jpeg);
   background-size: cover;
   background-position: bottom;
   height: 190px;
